--- a/HomeWorks/HW1.ipynb
+++ b/HomeWorks/HW1.ipynb
@@ -16,7 +16,7 @@
     "1. Вам необходимо реализовать SVD разложения используя SGD на explicit данных\n",
     "2. Вам необходимо реализовать матричное разложения используя ALS на implicit данных\n",
     "3. Вам необходимо реализовать матричное разложения используя BPR(pair-wise loss) на implicit данных\n",
-    "4. Вам необходимо реализовать матричное разложения используя WARP(list-wise loss) на implicit данных\n",
+    "4. Вам необходимо реализовать матричное разложения используя WARP(list-wise loss) на implicit данных\n"
    ]
   },
   {
